--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles.css">
   <style>
     :root {
-        --1inch-bg-01: #2392ec;
+        --1inch-bg-01: ##0376c9;
         --1inch__ui-05-07: linear-gradient(270deg, #622ee5 0%, #3c2491 100%);
         --1inch-text-01: #ffffff;
     }
@@ -33,7 +33,7 @@
     }
 
     button {
-        background-color: #1976d2;
+        background-color: #0376c9;
         border: none;
         padding: 12px 24px;
         font-size: 1rem;
@@ -45,7 +45,7 @@
     }
 
     button:hover {
-        background-color: #0044bd;
+        background-color: #0376c9;
     }
 
     #results {
@@ -60,7 +60,7 @@
     .dropdown-content {
         display: none;
         position: absolute;
-        background-color: #000000;
+        background-color: #1f1d1d;
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 1;
@@ -77,12 +77,12 @@
     }
 
     #search-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 30px;
-  margin-top: 60px;
+     display: flex;
+     flex-direction: row;
+        align-items: center;
+     justify-content: center;
+     margin-bottom: 30px;
+     margin-top: 60px;
 
 }
 
@@ -96,7 +96,7 @@
 }
 
 #search-button {
-  background-color: #1976d2;
+  background-color: #0376c9;
   border: none;
   padding: 12px 24px;
   font-size: 1rem;
@@ -107,7 +107,7 @@
   box-shadow: 0 1px 6px #0000000f, 0 2px 32px #00000029;
 }
 #search-button:hover {
-  background-color: #1976d2;
+  background-color: #0376c9;
 }
 .search-description-text {
   color: #6b6b6b; 
@@ -122,48 +122,27 @@
 .centered-text {
     text-align: center;
 }
+#theme-toggle {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  box-shadow: none;
+}
+.theme-toggle-button {
+  font-size: 1.5em;
+}
 .theme-dropdown {
   position: absolute;
   top: 10px;
   right: 20px;
 }
-
-.theme-dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #000000;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  padding: 12px 16px;
-}
-
-.theme-dropdown:hover .theme-dropdown-content {
-  display: block;
-}
-
-.theme-dropdown-content a {
-  display: block;
-}
-.dropdown-content {
-  background-color: #333333;
-  border-radius: 5px;
-  display: none;
-  position: absolute;
-  background-color: #000000;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  padding: 12px 16px;
-  border-radius: 5px;
-}
 body[data-theme="light"] {
-  background: linear-gradient(to right, rgba(240, 240, 240), rgba(230, 230, 230), rgba(220, 220, 220));
+  background: linear-gradient(to right, rgb(138, 166, 176), rgb(119, 150, 161), rgb(138, 166, 176));
   color: #000000;
 }
 
 body[data-theme="dim"] {
-  background: linear-gradient(to right, rgba(70, 70, 70), rgba(60, 60, 60), rgba(50, 50, 50));
+  background: linear-gradient(to right, rgb(46, 46, 46), rgb(45, 50, 61), rgba(46, 46, 46));
   color: #ffffff;
 }
 #search-input {
@@ -171,7 +150,7 @@ body[data-theme="dim"] {
   border-bottom-right-radius: 0;
 }
 #search-button {
-  background-color: #1976d2;
+  background-color: #0376c9;
   padding: 8px;
   font-size: 1.2rem;
   border: none;
@@ -181,29 +160,65 @@ body[data-theme="dim"] {
   color: white;
   border-radius: 0 5px 5px 0;
 }
+.wallet-dropdown {
+  display: inline-block;
+}
+
+.wallet-dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #000000;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.223);
+  z-index: 1;
+  padding: 12px 16px;
+  border-radius: 5px;
+}
+
+.wallet-dropdown:hover .wallet-dropdown-content {
+  display: block;
+}
+
+.wallet-dropdown-content a {
+  color: white;
+  text-decoration: none;
+}
   </style>
 </head>
 <body data-theme="dark">
     <div class="theme-dropdown">
-        <button id="theme-toggle">☀️🌙</button>
-        <div class="theme-dropdown-content">
-          <a href="#" id="light-theme">Light</a>
-          <a href="#" id="dim-theme">Dim</a>
-          <a href="#" id="dark-theme">Dark</a>
-        </div>
+        <button id="theme-toggle" class="theme-toggle-button">☀️🌙</button>
     </div>      
   <h1>zkSync Era Approval Checker</h1>
   <div id="search-description">
     <div class="centered-text" class="search-description-text">Review and revoke your token approvals for any dApp. For more information, check out our </span><a class="help-center-link" href="https://help.1inch.io/en/articles/6147312-token-approvals" target="_blank">help center article</a>.</div>
   <div id="search-container">
     </p>
-    <input type="text" id="search-input" placeholder="Enter address or ens name" />
+    <input type="text" id="search-input" placeholder="Enter wallet address or ENS name" />
     <button id="search-button">&#128269;</button>
 </div>  
   <div id="controls">
-    <button id="connect-wallet">Connect Wallet</button>
-    <button id="check-approvals">Get token approvals</button>
-    <button id="enableEthereumButton">Show Address</button>
+    <!-- Add this code below the </div> tag after the <div id="controls"> -->
+<table id="approvals-table" style="display: none;">
+    <thead>
+      <tr>
+        <th>Total number of approvals</th>
+        <th>Txn Hash</th>
+        <th>Last Updated UTC</th>
+        <th>Assets</th>
+        <th>Approved Spender</th>
+        <th>Allowances</th>
+      </tr>
+    </thead>
+    <tbody id="approvals-table-body">
+    </tbody>
+  </table>
+  
+    <div class="wallet-dropdown">
+       <button id="connect-wallet">Connect Wallet</button>
+      </div>      
+    <button id="check-approvals">View contract approvals</button>
+
     <div class="dropdown">
       <button>Helpful Links</button>
       <div class="dropdown-content">
