Add event listeners, add getAllowances function, switch to yarn

--- a/index.html
+++ b/index.html
@@ -185,6 +185,16 @@ body[data-theme="dim"] {
 }
   </style>
 </head>
+<table id="allowances-table">
+  <thead>
+    <tr>
+      <th>Token</th>
+      <th>Allowance</th>
+    </tr>
+  </thead>
+  <tbody>
+  </tbody>
+</table>
 <body data-theme="dark">
     <div class="theme-dropdown">
         <button id="theme-toggle" class="theme-toggle-button">☀️🌙</button>
@@ -198,7 +208,6 @@ body[data-theme="dim"] {
     <button id="search-button">&#128269;</button>
 </div>  
   <div id="controls">
-    <!-- Add this code below the </div> tag after the <div id="controls"> -->
 <table id="approvals-table" style="display: none;">
     <thead>
       <tr>
